test/e2e/testdata/ext-auth-http-headers-suffix.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-ext-auth-suffix
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  hostnames: ["suffix.example.com"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /myapp
    backendRefs:
    - name: infra-backend-v1
      port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ext-auth-suffix
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-ext-auth-suffix
  extAuth:
    http:
      path: /auth
      backendRef:
        name: envoy-ext-auth
        namespace: gateway-conformance-infra
        port: 8080
      headersToBackend: ["x-current-user", "x-current-headers"]
    headersToExtAuthOnMatch:
      - type: Suffix
        value: "-metadata"
